2010-09-20  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkrescue.in: Add explicit root argument to --set to
	prevent the UUID being interpreted as an argument to --set (matches
	previous change to prepare_grub_to_access_device).

2010-09-20  Colin Watson  <cjwatson@ubuntu.com>

	* kern/emu/hostdisk.c: Include <sys/ioctl.h> and <sys/disklabel.h>
	on FreeBSD.  Define HAVE_DIOCGDINFO on NetBSD and FreeBSD to reduce
	the verbosity of later #ifs.
	(find_partition_start): Define this function on FreeBSD too.
	(device_is_wholedisk) [__FreeBSD__ || __FreeBSD_kernel__]: New
	function.
	(grub_util_biosdisk_get_grub_dev): Use partition-start-sector logic
	on FreeBSD.

2010-09-20  Yves Blusseau  <blusseau@zetam.org>

	* util/grub-editenv.c: Use argp instead of getopt.

2010-09-20  Yves Blusseau  <blusseau@zetam.org>

	* util/grub-setup.c: Use argp instead of getopt.

2010-09-20  Yves Blusseau  <blusseau@zetam.org>

	Use gnulib-tool to create gnulib source files.

	* Add gnulib files generated by gnulib-tool in build-aux, m4 and
	grub-core/gnulib directories
	* .bzignore: Add **/.deps and autogenerated gnulib files
	* configure.ac: Assign auxiliary directory to build-aux, add invocation
	of gnulib macros, add grub-core/gnulib/Makefile
	* Makefile.am: Add gnulib directory in SUBDIRS (removing unnecessary .),
	include m4 directory to aclocal.
	* Makefile.util.def: Remove direct compilation of gnulib source files
	and use the new grub-core/gnulib/libgnu.a.
	* build-aux/config.rpath: move config.rpath from top directory to
	build-aux
	* conf/Makefile.common: Remove the macro _GL_UNUSED already defined
	in gnulib headers
	* conf/Makefile.extra-dist: Add m4/gnulib-cache.m4
	* grub-core/Makefile.core.def: Remove unnecessary extra_dist
	* grub-core/lib/posix_wrap/localcharset.h (locale_charset): Update
	header.
	* grub-core/lib/posix_wrap/langinfo.h (nl_langinfo): Return static
	string.

2010-09-20  Yves Blusseau  <blusseau@zetam.org>
